--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <header>
-            <p>Created by argoars</p>
+            <p>Created by dagamchik</p>
         </header>
         <h1>Key Generator</h1>
         <select id="keyCountSelect">
@@ -18,12 +18,11 @@
         </select>
         <button id="startBtn">Start</button>
         <div id="progressContainer" class="">
-            <div id="progressBar" style="width: 80%;"></div>
-            <span id="progressText">80%</span>
+            <div id="progressBar"></div>
+            <span id="progressText"></span>
         </div>
         <div id="keyContainer" class="">
             <h2>Generated Keys:</h2>
-            <p id="generatedKeys">BIKE-2NJ-ATMS-0W3V-QE6</p>
         </div>
         <footer>
             <button id="creatorChannelBtn">Канал создателя в Dzen</button>
