--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div id="keyContainer" class="">
             <h2>Generated Keys:</h2>
+            <p id="generatedKeys"></p>
         </div>
     </div>
     <script src="script.js"></script>
