--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p>Created by dagamchik</p>
         </header>
         <h1>Key Generator</h1>
-        <select id="keyCountSelect">
+        <select id="keyCountSelect" style="margin-bottom: 20px;">
             <option value="1">1 Key</option>
             <option value="2">2 Keys</option>
             <option value="3">3 Keys</option>
