--- a/index.html
+++ b/index.html
@@ -1,32 +1,297 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Key Gen By dagamchik</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        .container {
+            max-width: 600px;
+            margin: 40px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #db0517;
+            text-align: center;
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+        select, input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #db0517;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        button:disabled {
+            background-color: #aaa;
+            cursor: not-allowed;
+        }
+        button:hover:not(:disabled) {
+            background-color: #0056b3;
+        }
+        .progress-container {
+            margin-top: 20px;
+            position: relative;
+        }
+        .progress-bar {
+            width: 100%;
+            background-color: #e9ecef;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+        .progress-bar-fill {
+            height: 20px;
+            background-color: #007bff;
+            width: 0;
+            transition: width 0.5s;
+            text-align: center;
+            color: white;
+            line-height: 20px;
+            font-weight: bold;
+        }
+        .code-list {
+            margin-top: 20px;
+            background: #f8f9fa;
+            padding: 10px;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+            max-height: 300px;
+            overflow-y: auto;
+            font-family: monospace;
+        }
+        .tg-button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #2c7be5;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            text-align: center;
+            text-decoration: none;
+        }
+        .tg-button:hover {
+            background-color: #1a5ab2;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <header>
-            <p>Created by dagamchik</p>
-        </header>
-        <h1>Key Generator</h1>
-        <select id="keyCountSelect" style="margin-bottom: 20px;">
-            <option value="1">1 Key</option>
-            <option value="2">2 Keys</option>
-            <option value="3">3 Keys</option>
-            <option value="4">4 Keys</option>
+        <h1>Key Gen by argoars</h1>
+        <label for="gameSelect">Select Game:</label>
+        <select id="gameSelect">
+            <option value="1">Riding Extreme 3D</option>
+            <option value="2">Chain Cube 2048</option>
+            <option value="3">My Clone Army</option>
+            <option value="4">Train Miner</option>
         </select>
-        <button id="startBtn">Start</button>
-        <div id="progressContainer" class="">
-            <div id="progressBar"></div>
-            <span id="progressText"></span>
+
+        <label for="keyCount">Number of Keys to Generate:</label>
+        <input type="number" id="keyCount" min="1" max="4" value="1">
+
+        <button id="startButton" onclick="startProcess()">Start Process</button>
+
+        <div class="progress-container">
+            <div id="progressBar" class="progress-bar">
+                <div id="progressBarFill" class="progress-bar-fill">0%</div>
+            </div>
         </div>
-        <div id="keyContainer" class="">
-            <h2>Generated Keys:</h2>
-            <p id="generatedKeys"></p>
-        </div>
+
+        <div id="codeList" class="code-list"></div>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        const games = {
+            1: {
+                name: 'Riding Extreme 3D',
+                appToken: 'd28721be-fd2d-4b45-869e-9f253b554e50',
+                promoId: '43e35910-c168-4634-ad4f-52fd764a843f',
+            },
+            2: {
+                name: 'Chain Cube 2048',
+                appToken: 'd1690a07-3780-4068-810f-9b5bbf2931b2',
+                promoId: 'b4170868-cef0-424f-8eb9-be0622e8e8e3',
+            },
+            3: {
+                name: 'My Clone Army',
+                appToken: '74ee0b5b-775e-4bee-974f-63e7f4d5bacb',
+                promoId: 'fe693b26-b342-4159-8808-15e3ff7f8767',
+            },
+            4: {
+                name: 'Train Miner',
+                appToken: '82647f43-3f87-402d-88dd-09a90025313f',
+                promoId: 'c4480ac7-e178-4973-8061-9ed5b2e17954',
+            }
+        };
+
+        function generateClientId() {
+            const timestamp = Date.now();
+            const randomNumbers = Array.from({ length: 19 }, () => Math.floor(Math.random() * 10)).join('');
+            return `${timestamp}-${randomNumbers}`;
+        }
+
+        async function loginClient() {
+            const clientId = generateClientId();
+            const url = 'https://api.gamepromo.io/promo/login-client';
+            const data = {
+                appToken: games[args].appToken,
+                clientId: clientId,
+                clientOrigin: 'deviceid'
+            };
+            const headers = {
+                'Content-Type': 'application/json; charset=utf-8',
+            };
+            try {
+                const response = await fetch(url, {
+                    method: 'POST',
+                    headers: headers,
+                    body: JSON.stringify(data)
+                });
+                const result = await response.json();
+                return result.clientToken;
+            } catch (error) {
+                console.error('Ошибка при входе клиента:', error.message);
+                await new Promise(resolve => setTimeout(resolve, 5000));
+                return loginClient(); // Рекурсивный вызов
+            }
+        }
+
+        async function registerEvent(token) {
+            const eventId = generateRandomUUID();
+            const url = 'https://api.gamepromo.io/promo/register-event';
+            const data = {
+                promoId: games[args].promoId,
+                eventId: eventId,
+                eventOrigin: 'undefined'
+            };
+            const headers = {
+                'Authorization': `Bearer ${token}`,
+                'Content-Type': 'application/json; charset=utf-8',
+            };
+            try {
+                const response = await fetch(url, {
+                    method: 'POST',
+                    headers: headers,
+                    body: JSON.stringify(data)
+                });
+                const result = await response.json();
+                if (!result.hasCode) {
+                    console.log('Retry register event');
+                    await new Promise(resolve => setTimeout(resolve, 5000));
+                    return registerEvent(token); // Рекурсивный вызов
+                } else {
+                    return true;
+                }
+            } catch (error) {
+                console.error('Ошибка при регистрации события:', error.message);
+                console.error('Тело ответа:', await response.text());
+                await new Promise(resolve => setTimeout(resolve, 5000));
+                return registerEvent(token); // Рекурсивный вызов в случае ошибки
+            }
+        }
+
+        async function createCode(token) {
+            let response;
+            do {
+                try {
+                    const url = 'https://api.gamepromo.io/promo/create-code';
+                    const data = {
+                        promoId: games[args].promoId
+                    };
+                    const headers = {
+                        'Authorization': `Bearer ${token}`,
+                        'Content-Type': 'application/json; charset=utf-8',
+                    };
+                    response = await fetch(url, {
+                        method: 'POST',
+                        headers: headers,
+                        body: JSON.stringify(data)
+                    });
+                    const result = await response.json();
+                    if (result.promoCode) {
+                        return result.promoCode;
+                    }
+                } catch (error) {
+                    console.error('Ошибка при создании кода:', error.message);
+                    console.error('Тело ответа:', await response.text());
+                    await new Promise(resolve => setTimeout(resolve, 1000));
+                }
+            } while (!response || !response.promoCode); // Повторяем запрос, если ничего не возвращает
+        }
+
+        function generateRandomUUID() {
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+                const r = Math.random() * 16 | 0,
+                      v = c === 'x' ? r : (r & 0x3 | 0x8);
+                return v.toString(16);
+            });
+        }
+
+        async function startProcess() {
+            const startButton = document.getElementById('startButton');
+            startButton.disabled = true; // Блокируем кнопку
+
+            const progressBarFill = document.getElementById('progressBarFill');
+            const codeList = document.getElementById('codeList');
+            const gameSelect = document.getElementById('gameSelect');
+            const keyCountInput = document.getElementById('keyCount');
+            const selectedGame = parseInt(gameSelect.value);
+            const keyCount = parseInt(keyCountInput.value);
+
+            args = selectedGame;
+
+            codeList.innerHTML = ''; // Очистка списка кодов перед началом процесса
+
+            // Запускаем параллельно несколько потоков
+            const tasks = [];
+            for (let i = 0; i < keyCount; i++) {
+                tasks.push((async (index) => {
+                    try {
+                        const token = await loginClient();
+                        await registerEvent(token);
+                        const codeData = await createCode(token);
+                        // Выводим код в список
+                        codeList.innerHTML += `Code ${index + 1}: ${codeData}<br>`;
+                    } catch (error) {
+                        codeList.innerHTML += `Process ${index + 1} - Error: ${error.message}<br>`;
+                    }
+                    // Обновляем прогресс-бар
+                    const progress = ((index + 1) / keyCount) * 100;
+                    progressBarFill.style.width = `${progress}%`;
+                    progressBarFill.textContent = `${Math.round(progress)}%`;
+                })(i));
+            }
+
+            await Promise.all(tasks); // Ждем, пока все задачи завершатся
+            startButton.disabled = false; // Разблокируем кнопку
+        }
+    </script>
 
 
 </body></html>
