--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Key Gen by argoars</h1>
+        <h1>Key Gen by dagamchik</h1>
         <label for="gameSelect">Select Game:</label>
         <select id="gameSelect">
             <option value="1">Riding Extreme 3D</option>
